--- a/src/components/nav2/Nav2.css
+++ b/src/components/nav2/Nav2.css
@@ -1,47 +1,18 @@
-/* nav {
-    height: 8vh;
-    width: 99vw;
-    position: relative;
-    z-index: 10;
-    font-size: 0.9rem;
-} */
-/* 
-
-section {
-    border-radius: 1px;
-    background-color: black;
-    width: 100%;
-    height: 100%;
-    /* display: flex; */
-/* justify-content: space-between; */
-/* align-items: center; */
-/* } */
-/* 
-.nav_left div{
-    color: white;
-    padding-left:20px ;
-    padding-right:0px ;
-    /* display: flex;
-    width: 105%;
-    padding-left: 30px;
-    color: white; */
-/* } */
 
 .nav1 {
     position: relative;
-    width: 100vw;
-}
-
-
-.nav1 p {
-    padding-left: 20px;
 }
 
 .navs {
-    width: 99vw;
-    padding: 10, 20, 10, 20;
+    width: 100%;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     color: white;
-    justify-content: space-between;
     cursor: pointer;
+    overflow-x: scroll;
+}
+
+.navs::-webkit-scrollbar {
+    display: none;
 }
