--- a/src/index.css
+++ b/src/index.css
@@ -97,3 +97,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* App.css */
+html {
+  scroll-behavior: smooth;
+}
+
+.section {
+  height: 100vh; /* Make each section take up the full viewport height */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2em;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #ddd;
+}
+
